feat: Implement Home Screen UI with stats and heatmap
This commit introduces the home screen UI (`HomeActivity`) which displays push-up statistics and a monthly activity heatmap.

Key features:
- **UI Structure:**
    - Displays total push-ups today, this week, this month, and overall.
    - Includes an "Ask AI" input field.
    - Shows a monthly activity heatmap with different colors representing activity levels.
    - Displays current and highest streak for the month.
    - Shows a leaderboard preview.
    - Displays global push-up count.
    - A "Start" button to navigate to the push-up counter (functionality not yet implemented).
- **Styling & Theming:**
    - Adds new color resources for various UI elements and heatmap levels.
    - Defines `colors.xml` for night mode.
    - Sets transparent status bar for both light and dark themes.
    - Introduces "Special Gothic" font family in various weights and styles (condensed, expanded, etc.).
- **Icons & Drawables:**
    - Adds new vector drawables for AI, settings, fire (primary & secondary), global, and a day circle for the heatmap.
    - Includes placeholder images for user avatars in the leaderboard (`person1.jpg`, `person2.jpg`, `person3.jpg`).
- **Layout (`activity_home.xml`):**
    - Uses `ConstraintLayout`, `LinearLayout`, `CardView`, and `NestedScrollView` for structure.
    - Implements the heatmap using `FlexboxLayout`.
    - Uses `CircleImageView` for leaderboard avatars.
- **Heatmap Generation:**
    - `HomeActivity.kt` includes logic to dynamically generate a sample heatmap with 30 days and random activity levels (0, 1, or 2).
    - Colors for heatmap cells are determined by the activity level.
- **Dependencies:**
    - Adds `com.google.android.flexbox:flexbox` for the heatmap layout.
    - Adds `de.hdodenhof:circleimageview` for circular avatars.
- **Manifest:**
    - Sets `HomeActivity` as the launcher activity.
    - `MainActivity` is now a regular activity (not exported).
- **Strings:**
    - Adds n

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Camera permissions -->
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
-    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -17,14 +21,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PushCounter">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".HomeActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
