refactor: Organize codebase into feature-specific packages
This commit restructures the project by moving classes into new packages based on their functionality:

- **`ui.counter`**: Contains `MainActivity.kt` (for the push-up counter screen).
- **`ui.dashboard`**: Contains `DashboardFragment.kt` and `HomeActivity.kt` (for the main dashboard/home screen).
- **`ui.settings`**: Contains `SettingsFragment.kt` and `PersonalizeFragment.kt` (for settings and personalization screens).
- **`util`**: Contains `Constants.kt` and `PushUpDetector.kt` (for utility classes and helper logic).

**Key changes:**
- Moved all relevant Kotlin files to their new package locations.
- Updated `tools:context` attributes in layout XML files (`fragment_dashboard.xml`, `fragment_personalize.xml`, `activity_main.xml`, `activity_home.xml`, `fragment_settings.xml`) to reflect the new package names of their associated Activities/Fragments.
- Updated fragment names in `navigation.xml` to point to the new package locations for `DashboardFragment`, `SettingsFragment`, and `PersonalizeFragment`.
- Updated `android:name` attributes in `AndroidManifest.xml` for `HomeActivity` and `MainActivity` to their new package paths.
- Updated import statements within the moved Kotlin files to correctly reference classes in their new locations (e.g., `R` class, `Constants`, `PushUpDetector`).

This refactoring aims to improve code organization, maintainability, and scalability of the project. No functional changes were made.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PushCounter">
         <activity
-            android:name=".HomeActivity"
+            android:name=".ui.dashboard.HomeActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,7 +31,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.counter.MainActivity"
             android:exported="false"/>
     </application>
 
