feat: Update launcher icon and onboarding assets
This commit updates the application's launcher icon and introduces new assets for the onboarding screens.

Key Changes:

- **Launcher Icon:**
    - Replaced the previous adaptive launcher icon drawables (`ic_launcher_background.xml`, `ic_launcher_foreground.xml`) with a new set.
    - Added a new solid color background `app/src/main/res/values/ic_launcher_background.xml` (`#F3F3F3`).
    - Added new foreground (`ic_launcher_foreground.webp`) and round icon (`ic_launcher_round.webp`) assets in various densities (mdpi, hdpi, xhdpi, xxhdpi, xxxhdpi).
    - Updated `mipmap-anydpi-v26/ic_launcher.xml` and `mipmap-anydpi-v26/ic_launcher_round.xml` to use the new color background and mipmap foreground.
    - Added `ic_launcher-playstore.png` for the Play Store listing.
    - Updated existing `ic_launcher.webp` and `ic_launcher_round.webp` assets in mipmap density folders.

- **Onboarding Screen Assets:**
    - Added new images for onboarding screens:
        - `onboarding_image_1_1.png`
        - `onboarding_image_4_1.png`
    - In `OnBoardingFragment.kt`, updated `imageResId` for the first and fourth onboarding screens to use these new drawables.

- **Onboarding UI Enhancement:**
    - In `OnBoardingFragment.kt`, the "Skip" button now animates out (`removeWithAnim()`) on the last onboarding screen instead of just becoming GONE.
    - The `fadeView` animation duration in `FrontendUtils.kt` for `removeWithAnim` and `showWithAnim` has been shortened for quicker transitions.

- **Dependency Management:**
    - Added `dotsindicator` version `5.1.0` to `gradle/libs.versions.toml`.
    - Referenced this version in `app/build.gradle.kts` for the `com.tbuonomo:dotsindicator` dependency.

- **Navigation:**
    - Changed `androidx.navigation.NavOptions.Builder()` to `NavOptions.Builder()` in `OnBoardingFragment.kt` for navigation to the dashboard.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ cameraCamera2 = "1.4.2"
 cameraLifecycle = "1.4.2"
 cameraView = "1.4.2"
 circleimageview = "3.1.0"
+dotsindicator = "5.1.0"
 faceDetection = "16.1.7"
 flexbox = "3.0.0"
 kotlin = "2.2.10"
@@ -28,6 +29,7 @@ androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = 
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleRuntimeKtx" }
 circleimageview = { module = "de.hdodenhof:circleimageview", version.ref = "circleimageview" }
+dotsindicator = { module = "com.tbuonomo:dotsindicator", version.ref = "dotsindicator" }
 face-detection = { module = "com.google.mlkit:face-detection", version.ref = "faceDetection" }
 flexbox = { module = "com.google.android.flexbox:flexbox", version.ref = "flexbox" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
