Rename MainActivity to CounterActivity and update visibility of camera card
This commit renames `MainActivity.kt` to `CounterActivity.kt` and its corresponding layout file `activity_main.xml` to `activity_counter.xml`.

The visibility of the camera card in `CounterActivity` is now set to `INVISIBLE` instead of `GONE` when the `showCameraCardSwitch` is false, preserving its layout space.

References to the old class and layout names have been updated in `AndroidManifest.xml` and `DashboardFragment.kt`.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.counter.MainActivity"
+            android:name=".ui.counter.CounterActivity"
             android:exported="false"/>
     </application>
 
