feat: Convert ShareStatsFragment to ShareStatsActivity
This commit converts the `ShareStatsFragment` into a standalone `ShareStatsActivity`. This change simplifies the navigation flow after completing a push-up session.

Key changes:
- **ShareStatsActivity (`ShareStatsActivity.kt`, `activity_share_stats.xml`):**
    - Created a new `ShareStatsActivity` to display session statistics.
    - The layout (`activity_share_stats.xml`) is identical to the previous `fragment_share_stats.xml`.
    - Data (push-ups, time, rest) is now passed via Intent extras.
    - A "Home" button allows users to navigate back and finish the activity.
- **Removed `ShareStatsFragment`:**
    - Deleted `ShareStatsFragment.kt` and `fragment_share_stats.xml`.
- **Navigation Update (`CounterActivity.kt`):**
    - `CounterActivity` now launches `ShareStatsActivity` using an Intent instead of replacing a fragment.
- **Manifest Update (`AndroidManifest.xml`):**
    - Registered `ShareStatsActivity` in the manifest.
- **Resource Updates:**
    - Renamed `pushup_character.png` to `push_up_character.png`.
    - Updated string resources in `fragment_vertical_stats.xml` and `fragment_horizontal_stats.xml` to use string references instead of hardcoded text (e.g., `@string/push_ups` instead of "Push Ups").
    - Added new string resources for "Push Ups", "Time", "Rest", and default values like "0m 0s" in `strings.xml`.
- **Adapter Update (`StatsPagerAdapter.kt`):**
    - `StatsPagerAdapter` now takes `ShareStatsActivity` as a parameter instead of a `Fragment`.
    - `pushUps` parameter type changed from `Int` to `String` in `StatsPagerAdapter`, `VerticalStatsFragment`, and `HorizontalStatsFragment` to align with intent extra passing.

This refactoring streamlines the code and makes the share stats screen more independent.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -24,8 +24,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PushCounter">
         <activity
+            android:name=".ui.shareStats.ShareStatsActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.dashboard.HomeActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,7 +37,7 @@
         </activity>
         <activity
             android:name=".ui.counter.CounterActivity"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
