feat: Implement "Save Stats as Image" functionality
This commit introduces the ability for users to save their current workout statistics as a PNG image to their device's Pictures directory.

Key changes:

- **Permissions:**
    - Added `android.permission.WRITE_EXTERNAL_STORAGE` to `AndroidManifest.xml` with `android:maxSdkVersion="28"` for compatibility with older Android versions.
- **UI Changes (`activity_share_stats.xml`, `strings.xml`):**
    - Renamed the "Home" button in `ShareStatsActivity` to "Save".
    - Updated the corresponding string resource from "Home" to "Save".
- **Image Saving Logic (`ShareStatsActivity.kt`):**
    - Implemented `exportCurrentStats()` to capture the currently displayed stats fragment (either `VerticalStatsFragment` or `HorizontalStatsFragment`) as a transparent Bitmap.
    - **Android Q (API 29) and above:**
        - Uses `MediaStore` to save the bitmap to the "Pictures/PushCounter" directory without requiring explicit storage permissions.
    - **Android Pie (API 28) and below:**
        - Requests `WRITE_EXTERNAL_STORAGE` permission if not already granted.
        - Saves the bitmap to the "Pictures/PushCounter" directory.
        - Handles permission request results and saves a pending bitmap if permission is granted.
    - Added helper functions:
        - `captureViewAsTransparentBitmap()`: Captures a view's content as a Bitmap with a transparent background.
        - `findCurrentStatsFragmentView()`: Locates the currently visible stats fragment's view.
        - `saveBitmapToMediaStore()`: Saves Bitmap using `MediaStore` (API 29+).
        - `saveBitmapToLegacyPictures()`: Saves Bitmap to external storage (pre-API 29).
        - `writeBitmapPng()`: Writes Bitmap data as PNG to an `OutputStream`.
        - `generateFilename()`: Creates a unique filename based on the current timestamp (e.g., "PushUp_yyyyMMdd_HHmmss.png").
    - Shows toast messages for successful saves or errors, including permission denial.
- **String Resou

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
@@ -25,13 +26,13 @@
         android:theme="@style/Theme.PushCounter">
         <activity
             android:name=".ui.shareStats.ShareStatsActivity"
-            android:exported="false" />
+            android:exported="false">
+        </activity>
         <activity
             android:name=".ui.dashboard.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
