--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,7 +16,7 @@ junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 appcompat = "1.7.1"
 lifecycleRuntimeKtx = "2.9.3"
-material = "1.12.0"
+material = "1.13.0"
 activity = "1.10.1"
 constraintlayout = "2.2.1"
 navigationFragment = "2.9.3"
@@ -30,6 +30,7 @@ firebaseFirestore = "25.1.4"
 concurrentFutures = "1.2.0"
 guavaListenableFuture = "1.0"
 guavaAndroid = "33.2.1-android"
+swiperefreshlayout = "1.1.0"
 
 [libraries]
 androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraView" }
@@ -56,6 +57,7 @@ androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation
 androidx-concurrent-futures = { group = "androidx.concurrent", name = "concurrent-futures", version.ref = "concurrentFutures" }
 guava-listenablefuture = { group = "com.google.guava", name = "listenablefuture", version.ref = "guavaListenableFuture" }
 guava-android = { group = "com.google.guava", name = "guava", version.ref = "guavaAndroid" }
+androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "swiperefreshlayout" }
 
 #firebase auth
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
