feat: Implement SplashFragment with Lottie animation
This commit introduces a `SplashFragment` that displays a Lottie animation and then navigates to the `OnBoardingFragment`.

Key changes:
- **`SplashFragment.kt`:**
    - Created a new `SplashFragment`.
    - Uses `FragmentSplashBinding` for view binding.
    - Loads and plays a Lottie animation from `R.raw.splash`.
    - On animation end, it navigates to `OnBoardingFragment` using `findNavController()`.
- **`fragment_splash.xml`:**
    - Added a new layout for the splash screen.
    - Contains a `LottieAnimationView` to display the splash animation.
    - Set background to white and centered the animation.
- **`navigation.xml`:**
    - Updated the `app:startDestination` to `splashFragment`.
    - Added `splashFragment` to the navigation graph.
    - Defined an action `action_splashFragment_to_onBoardingFragment` to navigate from `SplashFragment` to `OnBoardingFragment`.
- **`HomeActivity.kt`:**
    - Integrated the new AndroidX Splash Screen API by calling `installSplashScreen()`.
- **`AndroidManifest.xml`:**
    - Set the theme for `HomeActivity` to `@style/Theme.EmptySplash` to use the new splash screen API.
- **`splash.xml` (values):**
    - Created a new style `Theme.EmptySplash` inheriting from `Theme.SplashScreen`.
    - Configured `windowSplashScreenBackground` to white and `windowSplashScreenAnimatedIcon` to transparent, with `postSplashScreenTheme` set to the main app theme.
- **`splash.json` (raw):**
    - Added the Lottie animation file.
- **`build.gradle.kts`:**
    - Added `androidx.core:core-splashscreen` dependency.
- **`libs.versions.toml`:**
    - Added `coreSplashscreen` version and dependency alias.
- **`strings.xml`:**
    - Added a placeholder string `hello_blank_fragment`.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
             android:exported="false"/>
         <activity
             android:name=".ui.dashboard.HomeActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.EmptySplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
