--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -49,6 +50,9 @@
         <activity
             android:name=".ui.counter.CounterActivity"
             android:exported="false" />
+        <service
+            android:name=".services.RestTimerService"
+            android:exported="false"/>
     </application>
 
 </manifest>
