feat: Add push-up analytics chart
This commit introduces a new analytics feature that displays a line chart of the user's push-up activity from the previous month on the "Analytics" screen.

The `vico` charting library has been added to render the chart.

Key changes:

-   **`DailyStatsFragment.kt`**:
    -   A new `CartesianChartView` has been added to the layout.
    -   A `setupCharts()` method configures the chart's appearance, including a gradient fill and cubic line connectors.
    -   It now observes `pushupCounts` from the ViewModel to populate the chart with data.
    -   The fragment now reloads chart data in `onResume()`.

-   **`DailyStatsViewModel.kt`**:
    -   Uses a `CartesianChartModelProducer` to manage and update the chart data.
    -   A new `loadThisMonthPushups()` function fetches push-up counts for the last month from the repository and updates both a `pushupCounts` LiveData and the chart model producer.

-   **`DailyStatsRepository.kt`**:
    -   Added a `fetchThisMonthPushupCounts()` method to query Firestore for push-up records from the previous full calendar month.

-   **`VicoChartMarker.kt`**:
    -   A new utility file has been created to provide a custom, styled marker for the chart, which appears when the user interacts with a data point.

-   **Layout and UI (`fragment_daily_stats.xml`, `strings.xml`, `styles.xml`)**:
    -   The "Daily Stats" screen has been renamed to "Analytics".
    -   The layout now includes a `CardView` to contain the new chart.
    -   A new style `ChartStyle` has been defined for the chart.

-   **Dependencies (`build.gradle.kts`, `libs.versions.toml`)**:
    -   The `com.patrykandpatrick.vico:views` library has been added to the project dependencies.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,6 +33,7 @@ concurrentFutures = "1.2.0"
 guavaListenableFuture = "1.0"
 guavaAndroid = "33.2.1-android"
 swiperefreshlayout = "1.1.0"
+vico = "2.2.0"
 
 [libraries]
 androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraView" }
@@ -62,6 +63,7 @@ androidx-concurrent-futures = { group = "androidx.concurrent", name = "concurren
 guava-listenablefuture = { group = "com.google.guava", name = "listenablefuture", version.ref = "guavaListenableFuture" }
 guava-android = { group = "com.google.guava", name = "guava", version.ref = "guavaAndroid" }
 androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "swiperefreshlayout" }
+vico-views = { group = "com.patrykandpatrick.vico", name = "views", version.ref = "vico" }
 
 #firebase auth
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
