--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ dotsindicator = "5.1.0"
 faceDetection = "16.1.7"
 flexbox = "3.0.0"
 glide = "5.0.4"
-kotlin = "2.2.10"
+kotlin = "2.2.20"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
@@ -32,8 +32,10 @@ firebaseFirestore = "25.1.4"
 concurrentFutures = "1.2.0"
 guavaListenableFuture = "1.0"
 guavaAndroid = "33.2.1-android"
+roomRuntime = "2.8.2"
 swiperefreshlayout = "1.1.0"
 vico = "2.2.0"
+retrofit = "3.0.0"
 
 [libraries]
 androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraView" }
@@ -44,6 +46,8 @@ androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = 
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleRuntimeKtx" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 circleimageview = { module = "de.hdodenhof:circleimageview", version.ref = "circleimageview" }
 dotsindicator = { module = "com.tbuonomo:dotsindicator", version.ref = "dotsindicator" }
 face-detection = { module = "com.google.mlkit:face-detection", version.ref = "faceDetection" }
@@ -64,6 +68,8 @@ guava-listenablefuture = { group = "com.google.guava", name = "listenablefuture"
 guava-android = { group = "com.google.guava", name = "guava", version.ref = "guavaAndroid" }
 androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "swiperefreshlayout" }
 vico-views = { group = "com.patrykandpatrick.vico", name = "views", version.ref = "vico" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 
 #firebase auth
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
