feat: Add Markdown rendering for AI responses
This commit introduces the Markwon library to render Markdown formatting in the AI chat responses, improving the readability and presentation of the AI's messages.

Key changes:
- **`gradle/libs.versions.toml`**: Added the `markwon` library dependency (`io.noties.markwon:core:4.6.2`).
- **`app/build.gradle.kts`**: Implemented the new Markwon dependency.
- **`AiChatAdapter.kt`**: In the `onBindViewHolder` method, the AI's response text is now processed by Markwon to render Markdown content directly into the `TextView`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -36,6 +36,7 @@ roomRuntime = "2.8.2"
 swiperefreshlayout = "1.1.0"
 vico = "2.2.0"
 retrofit = "3.0.0"
+markwon = "4.6.2"
 
 [libraries]
 androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraView" }
@@ -70,6 +71,7 @@ androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefre
 vico-views = { group = "com.patrykandpatrick.vico", name = "views", version.ref = "vico" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+noties-markwon-core = { module = "io.noties.markwon:core", version.ref = "markwon" }
 
 #firebase auth
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
