--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         <activity
             android:name=".ui.dashboard.HomeActivity"
             android:exported="true"
+            android:windowSoftInputMode="adjustResize"
             android:theme="@style/Theme.EmptySplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
