--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,7 +19,7 @@ espressoCore = "3.7.0"
 appcompat = "1.7.1"
 lifecycleRuntimeKtx = "2.9.3"
 lottie = "6.6.6"
-material = "1.13.0"
+material = "1.14.0-alpha06"
 activity = "1.10.1"
 constraintlayout = "2.2.1"
 navigationFragment = "2.9.3"
