Chore: Bump version and migrate dependency to version catalog
This commit prepares for a new release by incrementing the application version and migrating a dependency to the version catalog for better management.

Key changes:
- **`app/build.gradle.kts`**:
  - The app version has been updated from `0.1.9` to `0.2.0` (version code 11).
  - The `AndroidChart` dependency is now referenced from the version catalog (`libs.androidchart`) instead of being hardcoded.

- **`gradle/libs.versions.toml`**:
  - A new entry for `androidchart` (`com.github.AppDevNext:AndroidChart:3.1.0.31`) has been added to the versions and libraries sections.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.11.1"
+androidchart = "3.1.0.31"
 cameraCore = "1.4.2"
 cameraCamera2 = "1.4.2"
 cameraLifecycle = "1.4.2"
@@ -39,6 +40,7 @@ vico = "2.2.0"
 markwon = "4.6.2"
 
 [libraries]
+androidchart = { module = "com.github.AppDevNext:AndroidChart", version.ref = "androidchart" }
 androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraView" }
 androidx-camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "cameraLifecycle" }
 androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraCamera2" }
