Refactor: Replace RestTimerService with AlarmManager for rest timer
This commit replaces the `RestTimerService` with `AlarmManager` to handle rest period countdowns, making the implementation more efficient and reliable, especially on newer Android versions. The foreground service was removed in favor of scheduling an exact alarm with a `BroadcastReceiver` (`RestAlarmReceiver`).

A countdown notification is now shown during the rest period, and its time is updated via the main UI thread in `CounterActivity`. The end timestamp of the rest period is persisted in `Preferences` to accurately calculate the remaining time, even if the activity is recreated.

Key changes:
- **`services/RestTimerService.kt`**: Deleted the foreground service implementation.
- **`ui/counter/CounterActivity.kt`**:
  - Replaced `startForegroundService` with logic to schedule an exact alarm using `AlarmManager`.
  - Added methods to schedule (`scheduleRestAlarm`), cancel (`cancelRestAlarm`), and update a countdown notification (`updateCountdownNotification`).
  - Remaining rest time is now calculated based on a stored end timestamp from `Preferences`.
- **`utils/reminderUtils/RestAlarmReceiver.kt`**:
  - Added a new `BroadcastReceiver` to show a notification when the rest period finishes.
- **`utils/Preferences.kt`**:
  - Added `getRestEndTimestamp()` and `setRestEndTimestamp()` to persist the rest timer's end time.
- **`AndroidManifest.xml`**:
  - Removed the `RestTimerService` declaration and foreground service permissions.
  - Registered the new `RestAlarmReceiver`.
- **`MyApp.kt`**:
  - Updated the notification channel ID to use the constant from `RestAlarmReceiver`.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,6 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
@@ -60,10 +58,10 @@
         <activity
             android:name=".ui.counter.CounterActivity"
             android:exported="false" />
-        <service
-            android:name=".services.RestTimerService"
-            android:exported="false"
-            android:foregroundServiceType="dataSync"/>
+
+        <receiver
+            android:name=".utils.reminderUtils.RestAlarmReceiver"
+            android:exported="false" />
 
         <receiver
             android:name=".utils.reminderUtils.PushupAlarmReceiver"
